// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test on GifGrid.js  Match Snapshot GifGrid.js 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Hola mundo
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test on GifGrid.js  should show items when data is loaded useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Hola mundo
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="Cualquier cosa"
      url="https//localhost/imagen.jpg"
    />
  </div>
</Fragment>
`;
